监控/prometheus/yaml/01-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
