监控/prometheus/yaml/04-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    name: prometheus
    phase: prod

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: prometheus
        phase: prod
    spec:
      securityContext:
        fsGroup: 472
        runAsUser: 0
      serviceAccountName: prometheus
      containers:
      - name: prometheus
        image: harbor.tongbanjie.org/k8s/prometheus:v2.5.0
        args:
          - "--config.file=/etc/prometheus/prometheus.yaml"
          - "--storage.tsdb.path=/prometheus" ## TSDB 数据的存储路径
          - "--storage.tsdb.retention=168h" ## 保留多长时间的数据
          - "--web.enable-lifecycle" ## 非常重要, 开启热更新支持, 有了这个参数之后, prometheus.yml 配置文件只要更新了, 通过执行http://localhost:9090/-/reload就会立即生效, 所以一定要加上这个参数
          - "--web.enable-admin-api" ## 开启此选项, 可以操作数据库功能
        ports:
        - name: web
          containerPort: 9090
        volumeMounts:
        - name: config
          mountPath: /etc/prometheus
        - name: rules
          mountPath: /etc/prometheus/rules
        - name: data
          mountPath: /prometheus
        - mountPath: /var/run/secrets/etcd-sercret
          name: etcd-secret
        - mountPath: /etc/localtime
          name: time
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config
        configMap:
          name: prometheus-config
      - name: rules
        configMap:
          name: prometheus-rules
      - name: etcd-secret
        secret:
          defaultMode: 511
          secretName: etcd-certs
      - name: time
        hostPath:
          path: /etc/localtime
          type: ""
      - name: data
        nfs:
          server: 192.168.7.14
          path: /mnt/nfsvol/monitoring/prometheus
