监控/prometheus/yaml/07-controller-manager-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: kube-controller-manager
  name: kube-controller-manager
  namespace: kube-system
spec:
  clusterIP: None
  ports:
  - name: controller-manager
    port: 10252
    protocol: TCP
    targetPort: 10252
  selector:
    component: kube-controller-manager
  sessionAffinity: None
  type: ClusterIP
