监控/prometheus/yaml/08-scheduler-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: kube-scheduler
  name: kube-scheduler
  namespace: kube-system
spec:
  clusterIP: None
  ports:
  - name: kube-scheduler
    port: 10251
    protocol: TCP
    targetPort: 10251
  selector:
    component: kube-scheduler
  sessionAffinity: None
  type: ClusterIP
