监控/prometheus/yaml/10-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
spec:
  rules:
  - host: prometheus.generals.space
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.generals.space
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
